{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 29,
  "lineage": "0456835d-271a-1cfb-3410-97a120658661",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkInterfaces/app-network",
            "ip_configuration": [
              {
                "name": "app-webserver",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-2B-D9",
            "name": "app-network",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "azure-3tier-app",
            "virtual_machine_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Compute/virtualMachines/app-vm"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_subnet.app-subnet",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkInterfaces/web-network",
            "ip_configuration": [
              {
                "name": "web-webserver",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "00-22-48-D4-DB-9E",
            "name": "web-network",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "azure-3tier-app",
            "virtual_machine_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Compute/virtualMachines/web-vm"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_subnet.web-subnet",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.networksecuritygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "centralindia",
            "name": "app-nsg",
            "resource_group_name": "azure-3tier-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networksecuritygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "centralindia",
            "name": "db-nsg",
            "resource_group_name": "azure-3tier-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networksecuritygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "centralindia",
            "name": "web-nsg",
            "resource_group_name": "azure-3tier-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networksecuritygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.networksecuritygroup.azurerm_network_security_group.app-nsg",
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_subnet.app-subnet",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.networksecuritygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet"
          },
          "dependencies": [
            "module.networksecuritygroup.azurerm_network_security_group.db-nsg",
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_subnet.db-subnet",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.networksecuritygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.networksecuritygroup.azurerm_network_security_group.web-nsg",
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_subnet.web-subnet",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.virtual-network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-3tier-app",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.virtual-network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-3tier-app",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.virtual-network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-3tier-app",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs",
            "module.virtual-network.azurerm_virtual_network.vnet01"
          ]
        }
      ]
    },
    {
      "module": "module.virtual-network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "32716894-6fb3-42b8-9b07-95386e196f2b",
            "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "centralindia",
            "name": "vnet01",
            "resource_group_name": "azure-3tier-app",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              },
              {
                "address_prefix": "192.168.3.0/24",
                "id": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
                "name": "db-subnet",
                "security_group": "/subscriptions/9ac85a90-9bd9-4c30-8494-196cd632b620/resourceGroups/azure-3tier-app/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
              }
            ]
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-3tier-app-rs"
          ]
        }
      ]
    }
  ]
}